--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,8 @@
 {
-  "name": "Figma Code Highlighter",
+  "name": "Shopify.dev Code Highlighter",
   "id": "764836637878472379",
   "api": "1.0.0",
   "main": "dist/code.js",
-  "ui": "dist/ui.html"
+  "ui": "dist/ui.html",
+  "editorType": ["figjam", "dev"]
 }
