--- a/package.json
+++ b/package.json
@@ -19,19 +19,22 @@
     "email": "ixtgorilla@gmail.com"
   },
   "license": "BSD-3-Clause",
+  "engines": {
+    "node": "^20"
+  },
   "devDependencies": {
     "@types/highlight.js": "^9.12.3",
     "@types/react": "^16.9.6",
     "@types/react-dom": "^16.9.2",
-    "css-loader": "^3.2.0",
-    "html-webpack-inline-source-plugin": "0.0.10",
-    "html-webpack-plugin": "^3.2.0",
-    "style-loader": "^1.0.0",
-    "ts-loader": "^6.2.0",
-    "typescript": "^3.6.4",
-    "url-loader": "^2.2.0",
-    "webpack": "^4.41.1",
-    "webpack-cli": "^3.3.9"
+    "css-loader": "6.8.1",
+    "@effortlessmotion/html-webpack-inline-source-plugin": "1.0.3",
+    "html-webpack-plugin": "5.5.3",
+    "style-loader": "3.3.3",
+    "ts-loader": "9.5.0",
+    "typescript": "5.2.2",
+    "url-loader": "4.1.1",
+    "webpack": "5.89.0",
+    "webpack-cli": "5.1.4"
   },
   "dependencies": {
     "@types/humps": "^1.1.2",
