--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
   "compilerOptions": {
     "target": "es6",
     "jsx": "react",
-    "typeRoots": ["./src/types"]
+    "typeRoots": ["./src/types"],
+    "allowSyntheticDefaultImports": true,
+    "moduleResolution": "node"
   }
 }
